# c

librarybuilding/: readme.txt
librarybuilding/cmake/: CMakeLists.txt
librarybuilding/cmake/demo/: CMakeLists.txt
librarybuilding/cmake/include/: libabc.h
librarybuilding/cmake/src/: CMakeLists.txt  c.c
librarybuilding/demo/: demo_libabc  demo_libabc.c  demo_libabc.c~  demo_libabc_so
librarybuilding/src/: a.c  a.c~  b.c  b.c~  c.c~
modulo1/: LEEME.txt  auxiliares.c  auxiliares.h  cuarto  cuarto.c  cuarto2  cuarto2.c  makefile  octavo  octavo.c  primer  primer.c  quinto  quinto.c  segundo  segundo.c  segundo2  segundo2.c  septimo  septimo.c  septimo.i  sexto  sexto.c  sexto2  sexto2.c  tercer  tercer.c  tercer2.c
modulo2/: LEEME.txt  LEEME.txt~  cuarto  cuarto.c  primer  primer.c  quinto  quinto.c  quinto.c~  quinto2  quinto2.c  segundo  segundo.c  segundo2  segundo2.c  tercer  tercer.c  tercer2  tercer2.c
modulo3/: fir.c  fir.c~  fir.h  fir.h~  genera_senales.c  genera_senales.c~  genera_senales.h  genera_senales.h~  testfir  testfir.c~
modulo4/: CMakeLists.txt~  auxiliares.c~  auxiliares.h~  makefile2~  makefile3~  makefile4~  makefile~  primer  primer.c~  quinto.c~  segundo  segundo.c  segundo.c~
modulo4/cmake/: demo.c~
modulo4/cmake/1/: CMakeCache.txt  CMakeLists.txt  CMakeLists.txt~  Makefile  Quinto  auxiliares.h  cmake_install.cmake
modulo4/cmake/2/: CMakeCache.txt  CMakeLists.txt  CMakeLists.txt~  Makefile  b.c  cmake_install.cmake  demo
modulo4/cmake/3/: CMakeCache.txt  CMakeLists.txt  CMakeLists.txt~  Makefile  cmake_install.cmake
modulo4/cmake/3/demo/: CMakeLists.txt  CMakeLists.txt~  Makefile  cmake_install.cmake  demo.c
modulo4/documentacion/: Doxyfile  fir.c  fir.c~  fir.h  fir.h~  genera_senales.c  genera_senales.c~  genera_senales.h  makefile  testfir  testfir.c
modulo4/documentacion/doc/html/: files.html  fir_8c.html  fir_8c__incl.map  fir_8c__incl.md5  fir_8h.html  fir_8h__dep__incl.map  fir_8h__dep__incl.md5  fir_8h_source.html  genera__senales_8c.html  genera__senales_8c__incl.map  genera__senales_8c__incl.md5  genera__senales_8h.html  genera__senales_8h__dep__incl.map  genera__senales_8h__dep__incl.md5  genera__senales_8h__incl.map  genera__senales_8h__incl.md5  genera__senales_8h_source.html  globals.html  globals_defs.html  globals_func.html  globals_type.html  globals_vars.html  graph_legend.html  index.html  testfir_8c.html  testfir_8c__incl.map  testfir_8c__incl.md5  testfir_8c_a51af30a60f9f02777c6396b8247e356f_cgraph.map  testfir_8c_a51af30a60f9f02777c6396b8247e356f_cgraph.md5
modulo4/documentacion/doc/html/search/: all_63.html  all_66.html  all_69.html  all_73.html  all_74.html  defines_73.html  defines_74.html  files_66.html  files_67.html  files_74.html  functions_66.html  functions_6d.html  functions_73.html  search.js  typedefs_73.html  variables_74.html
modulo4/documentacion/doc/latex/: doxygen.sty  files.tex  fir_8c.tex  fir_8c__incl.md5  fir_8h.tex  fir_8h__dep__incl.md5  genera__senales_8c.tex  genera__senales_8c__incl.md5  genera__senales_8h.tex  genera__senales_8h__dep__incl.md5  genera__senales_8h__incl.md5  refman.aux  refman.idx  refman.ilg  refman.ind  refman.out  refman.tex  refman.tex~  refman.toc  testfir_8c.tex  testfir_8c__incl.md5  testfir_8c_a51af30a60f9f02777c6396b8247e356f_cgraph.md5
modulo4/make/: auxiliares.c  makefile  makefile2  makefile3  makefile4  quinto  quinto.c
modulo4/valgrind/: core  cuarto  cuarto.c~  primero  primero.c  primero.c~  segundo  segundo.c  segundo.c~  tercero  tercero.c  tercero.c~
